--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,27 @@
   color: white;
 }
 
+.table_count_input{
+  margin-bottom: 24px;
+}
+
+.players_pair_container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 24px;
+}
+
+.player_name_header {
+  margin: 0 16px 0 0;
+}
+
+.player_name_input {
+  margin: 0;
+  width: 160px;
+}
+
 .App-link {
   color: #61dafb;
 }
